--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11112,6 +11112,16 @@ textarea.form-control-lg {
     display: none !important;
   }
 }
+@keyframes pulse-border {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1.5);
+    opacity: 0;
+  }
+}
 .btn-rounded {
   position: relative;
   padding: 0.9375rem 4.375rem 0.9375rem 1.2rem;
@@ -11145,6 +11155,29 @@ textarea.form-control-lg {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+.display-2 {
+  margin-bottom: 1rem;
+  text-transform: capitalize;
+  font-family: "Poppins", sans-serif;
+}
+.display-2--intro {
+  display: inline-block;
+  font-weight: 700;
+  font-family: "Poppins", sans-serif;
+}
+.display-2--description {
+  font-size: 1.5rem;
+  display: inline-block;
+  margin-top: 1.2rem;
+  text-transform: none;
+}
+@media (max-width: 991.98px) {
+  .display-2--description {
+    display: block;
+    font-size: 1rem;
+  }
+}
+
 .menu {
   background: linear-gradient(to right, #9926f0, #d122e3);
 }
@@ -11154,10 +11187,37 @@ ul {
   align-items: center;
 }
 ul li {
-  padding: 0 0.7rem;
+  padding: 0rem 0.7rem;
 }
 ul li a {
   font-weight: 600;
+}
+ul li:hover {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.intro-section {
+  background: linear-gradient(to right, #9926f0, #d122e3);
+  padding: 10rem 0 0 0;
+  width: 100%;
+  height: 100%;
+}
+
+.border-animation {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 6rem;
+  height: 6rem;
+  border: 0.55rem solid #fff;
+  border-radius: 50%;
+  animation: pulse-border 1.2s linear infinite;
+}
+.border-animation--border1 {
+  animation-delay: 1s;
+}
+.border-animation--border2 {
+  animation-delay: 1.2s;
 }
 
 /*# sourceMappingURL=main.css.map */
