--- a/scss/components/_mixins.scss
+++ b/scss/components/_mixins.scss
@@ -4,3 +4,12 @@
 @mixin gradient {
     background: linear-gradient(to right, rgba($primary, 1), rgba($secondary, 1));
 }
+
+// ! absolute center
+@mixin absouluteCenter {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+}
