--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -11178,6 +11178,30 @@ textarea.form-control-lg {
   }
 }
 
+.heading-line::before {
+  content: "";
+  width: 10rem;
+  height: 0.1rem;
+  display: block;
+  margin: 0 auto;
+  background-color: #9926f0;
+}
+
+.heading-line::after {
+  content: "";
+  padding-top: 0.5rem;
+  width: 2rem;
+  height: 0.2rem;
+  display: block;
+  margin: 0 auto;
+  background-color: #9926f0;
+}
+
+.border-right {
+  border-right: 0.1rem solid #dee2e6;
+  height: 100%;
+}
+
 .menu {
   background: linear-gradient(to right, #9926f0, #d122e3);
 }
@@ -11218,6 +11242,24 @@ ul li:hover {
 }
 .border-animation--border2 {
   animation-delay: 1.2s;
+}
+
+.companies {
+  padding: 0 0 5rem 0;
+}
+.companies__logo-box {
+  max-width: 100%;
+  height: 3rem;
+  margin-bottom: 2rem;
+  padding: 0.5rem;
+  text-align: center;
+  position: relative;
+}
+.companies__logo-box img {
+  height: 100%;
+}
+.companies__logo-box img:hover {
+  filter: grayscale(120);
 }
 
 /*# sourceMappingURL=main.css.map */
